--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "currency-exchange-widget",
   "version": "0.1.0",
   "homepage": "http://matthewbpt.github.io/currency-exchange-widget",
+  "license": "MIT",
   "dependencies": {
     "currency-symbol-map": "^4.0.3",
     "lodash": "^4.17.5",
@@ -12,7 +13,7 @@
     "react-mdl": "^1.11.0",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.1",
+    "react-scripts": "3.0.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "string-strip-html": "^1.3.2"
@@ -20,7 +21,19 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
